# jcarbon

./: .gitignore  MODULE.bazel  README.md  WORKSPACE  build_benchmark_deps.sh  build_python_protos.sh  callback test.ipynb  install_server_deps.sh  jcarbon_server.sh  jcarbon_server_with_nvml.sh  pom.xml  pyproject.toml  requirements.txt  run_dacapo.sh  run_main_server.sh  run_nvml_server.sh  run_pyperformance.sh  run_renaissance.sh  smoke_test.sh  tf1_jcarbon_test.py  tf2_jcarbon_test-GLUE.ipynb
benchmarks/: BUILD  pom.xml
benchmarks/src/main/java/jcarbon/benchmarks/: BUILD  BenchmarkUtil.java  JCarbonBenchmarkUtil.java  JCarbonCallback.java  JCarbonPlugin.java
benchmarks/src/main/java/jcarbon/dacapo/: JCarbonCallback.java
experiments/bert_finetune/: bert_glue_finetune.py  bert_glue_finetune.sh  bert_glue_finetune_experiment.sh  bert_glue_finetune_experiment_test.sh
experiments/bert_inference/: bert_glue_inference.py
service/: BUILD
service/src/main/python/: pyproject.toml
service/src/main/python/jcarbon/: baseline_multiprocess_monitor.py  cli.py  client.py  csv_converter.py  energy.py  jcarbon_service_pb2.py  jcarbon_service_pb2.pyi  jcarbon_service_pb2_grpc.py  monitor.py  multiprocess_monitor.py  report.py  signal.py  signal_pb2.py  signal_pb2.pyi  smoke_test.py  tensor.py  tensorflow.py
src/jcarbon/: BUILD
src/jcarbon-proto/: BUILD
src/jrapl/: BUILD  README.md  pom.xml
src/native/: BUILD  pom.xml
src/native/src/main/c/: energy_check_utils.c  micro_architecture.c  monotonic_timestamp.c  monotonic_timestamp.h  native_library.c  rapl.c
(+209 files in other folders)
